# PRO-CVD

./: .gitignore  README.md
.claude/: settings.local.json
cpp/: CMakeLists.txt  CMakePresets.json  README.md
cpp/include/procvd/: app.hpp  camera.hpp  config.hpp  geometry.hpp  pattern.hpp  projector.hpp
cpp/src/: app.cpp  camera.cpp  geometry.cpp  main.cpp  pattern.cpp  projector.cpp
cpp/tests/: CMakeLists.txt  check.hpp  fakes.hpp  geometry_test.cpp  pattern_test.cpp  pipeline_test.cpp
python/: README.md  requirements.txt  run.py
python/calibration/: cvd_pattern.py  geometry.py  projector.py
python/tests/: test_camera.py  test_projector.py
